# ai-customer-service

./: .env.example  .gitignore  README.md  TASKS.md  pyproject.toml
app/: __init__.py  chatbot.py  chunker.py  config.py  embedding.py  llm.py  problem_layers.py  qdrant_index.py  rag.py  retriever.py  server.py  storage.py  vector_retriever.py
data/knowledge/: sample_faq.md
static/: app.js  index.html  styles.css
tests/: test_config.py  test_embedding.py  test_llm.py  test_problem_layers.py  test_qdrant_index.py  test_rag.py  test_retriever.py  test_server.py  test_storage.py  test_vector_retriever.py
